syntax = "proto3";

package inventory.proto;

option java_multiple_files = true;
option java_outer_classname = "GreetingServiceProto";
option java_package = "com.apzda.cloud.gsvc.proto";

message CurrentUser {
  string uid = 1;
}

message UploadFile {
  string filename = 1;
  string content_type = 2;
  string name = 3;
  string ext = 4;
  string file = 5;
}

message HelloRequest {
  string  name = 1;
  bytes   file = 2;
  UploadFile upload_file = 3;
  repeated  UploadFile ds_files = 4;
  CurrentUser current_user = 10;
}

message HelloResponse{
  int32 err_code = 1;
  string err_msg = 2;
  string name = 3;

  uint32 file_count = 10;
  CurrentUser current_user = 15;
  uint64 file_length = 20;
}

service GreetingService {
  // unary
  rpc sayHello(HelloRequest) returns(HelloResponse);
  // server-streaming
  rpc sayHei(HelloRequest) returns (stream HelloResponse);
  // bidirectional-streaming
  rpc sayHi(stream HelloRequest) returns (stream HelloResponse);
}

///////////////////////
message HelloReq {
  string name = 1;
  optional UploadFile file = 10;
  repeated UploadFile files = 20;
  CurrentUser current_user = 30;
}

message HelloRes {
  int32 err_code = 1;
  string err_msg = 2;
  string name = 3;
}

service InventoryService {
  // unary
  rpc sayHello(HelloReq) returns(HelloRes){}
  // server-streaming
  rpc sayHei(HelloReq) returns (stream HelloRes);
  // client-streaming
  rpc sayYoho(stream HelloReq) returns(HelloRes){}
  // bidi-streaming
  rpc sayHi(stream HelloReq) returns (stream HelloRes);
}